--- a/app/src/main/res/layout/frag_specialization.xml
+++ b/app/src/main/res/layout/frag_specialization.xml
@@ -24,20 +24,30 @@
             <ImageView style="@style/spinner_image_style" />
         </RelativeLayout>-->
 
-        <AutoCompleteTextView
-            android:id="@+id/actv_specializationCat"
+        <android.support.v7.widget.CardView
+            android:id="@+id/searchCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="">
+            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:padding="10dp">
 
-            <requestFocus />
-        </AutoCompleteTextView>
+            <AutoCompleteTextView
+                android:id="@+id/actv_specializationCat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:hint="Search Doctor"
+                android:padding="10dp"
+                android:text=""
+                android:textSize="12sp"/>
+        </android.support.v7.widget.CardView>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyVDocSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/actv_specializationCat"
+            android:layout_below="@+id/searchCard"
             android:layout_marginTop="20dp"
             android:scrollbars="vertical" />
     </RelativeLayout>
