--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorPrimaryDark">#136428</color>
     <color name="colorPrimaryDark_2">#29A829</color>
 
-    <color name="colorAccent">#00D4FF</color>
+    <color name="colorAccent">#136428</color>
     <color name="color_white">#FFF</color>
 
     <color name="red">#FF0000</color>
