--- a/app/src/main/res/layout/frag_otp.xml
+++ b/app/src/main/res/layout/frag_otp.xml
@@ -1,5 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+
+    tools:context="com.electrocraft.nirzo.pluse.view.activity.patient.PatientOtpActivity">
+
+
+    <LinearLayout
+        android:id="@+id/lledtOtpInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/top_icon"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/newlogo" />
+
+
+        <EditText
+            android:id="@+id/login_pin_first_edittext"
+            style="@style/edit_text_style_1"
+            android:layout_marginTop="40dp"
+            android:contentDescription="@string/pin_content_desc"
+            android:hint="OTP Code"
+            android:inputType="number" />
+
+
+        <EditText
+            android:id="@+id/login_pin_hidden_edittext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:contentDescription="@string/pin_content_desc"
+            android:cursorVisible="false"
+            android:gravity="center"
+            android:maxLength="4"
+            android:textColor="#00000000" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/robotoregular"
+                android:gravity="left"
+                android:onClick="otpChangeNumber"
+                android:paddingRight="20dp"
+                android:text="Change Mobile Number"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="@color/colorPrimary"
+                android:typeface="normal" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/robotoregular"
+                android:gravity="right"
+                android:onClick="otpResendOTP"
+                android:paddingLeft="10dp"
+                android:text="Resend OTP"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="@color/colorPrimary"
+                android:typeface="normal" />
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_otp_verify"
+            style="@style/general_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:text="@string/verify_n_continue"
+            android:textAllCaps="false" />
+    </LinearLayout>
+
+
+</RelativeLayout>
+
+<!--
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,14 +123,14 @@
         android:layout_marginTop="172dp"
         android:gravity="center">
 
-        <!--     <EditText
+        &lt;!&ndash;     <EditText
                  android:id="@+id/edtOtpInput"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
 
                  android:ems="10"
                  android:hint="@string/enter_access_number"
-                 android:inputType="textPersonName" />-->
+                 android:inputType="textPersonName" />&ndash;&gt;
         <EditText
             android:id="@+id/login_pin_first_edittext"
             style="@style/pin_edit_text_style"
@@ -103,3 +205,4 @@
 
         android:text="@string/verify_n_continue" />
 </RelativeLayout>
+-->
