--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -6,85 +6,147 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <include
-        android:id="@+id/toolbar"
-        layout="@layout/appbar_layout" />-->
-
-
-    <!--  <RelativeLayout
-          android:id="@+id/rl"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:background="@drawable/focus_effect_edit_text"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent">
-
-
-
-      </RelativeLayout>-->
-
     <TextView
-        android:textStyle="bold"
-        android:gravity="center"
+
         android:id="@+id/tvLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="@string/reasonLabel"
-        app:layout_constraintHorizontal_bias="0.503"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/edtPatientDoctorAppointmentReason"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:focusable="true"
-        android:gravity="top|left"
-        android:hint="Reason"
-        android:inputType="textMultiLine"
-        android:scrollbars="vertical"
-        android:lines="8"
-        android:maxLines="10"
-        android:minLines="6"
+        android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
+        android:elevation="2dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLabel">
+
+        <EditText
+            android:id="@+id/edtPatientDoctorAppointmentReason"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:focusable="true"
+            android:gravity="top|left"
+            android:hint="Reason"
+            android:inputType="textMultiLine"
+            android:lines="8"
+            android:maxLines="10"
+            android:minLines="6"
+            android:scrollbars="vertical" />
+
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cv">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/pick_time_n_date"
+                android:textColor="@color/gray" />
+
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/ic_menu_pickup_date_range" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
     <Button
-        android:id="@+id/btn_pickTime"
-        style="@style/general_button_style"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_date_range_black_24dp"
-        android:text="@string/pick_time_n_date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtPatientDoctorAppointmentReason" />
-
-<!--    <Button
         android:id="@+id/btn_bookAppointment"
-        style="@style/general_button_style"
-        android:layout_width="0dp"
+
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:enabled="false"
         android:text="@string/book_reason_not_provided"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />-->
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!-- <Button
+         android:id="@+id/btn_pickTime"
+         style="@style/general_button_style"
+         android:layout_width="0dp"
+         android:layout_height="wrap_content"
+         android:layout_marginEnd="8dp"
+         android:layout_marginStart="8dp"
+         android:layout_marginTop="8dp"
+         android:drawableStart="@drawable/ic_date_range_black_24dp"
+
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toBottomOf="@+id/cv" />-->
+
+
+    <!--<Button
+        android:id="@+id/btn_pickTime"
+        style="@style/pickup_button_style"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:drawableEnd="@drawable/ic_menu_pickup_date_range"
+        android:gravity="center_vertical"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:text="@string/pick_time_n_date"
+        android:textColor="@color/gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cv" />-->
+
+    <!--    <Button
+            android:id="@+id/btn_bookAppointment"
+            style="@style/general_button_style"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:enabled="false"
+            android:text="@string/book_reason_not_provided"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />-->
 
     <!--<Button
         android:id="@+id/btn_pickTime"
