--- a/app/src/main/res/layout/pt_app_bar_home.xml
+++ b/app/src/main/res/layout/pt_app_bar_home.xml
@@ -22,8 +22,10 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabTextColor="@color/white"
             app:tabGravity="fill"
             app:tabMode="fixed" />
 
