--- a/app/src/main/res/layout/frag_location_base.xml
+++ b/app/src/main/res/layout/frag_location_base.xml
@@ -6,27 +6,39 @@
 
 
     <RelativeLayout
-        android:layout_marginStart="@dimen/container_margin"
-        android:layout_marginEnd="@dimen/container_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/container_margin"
+        android:layout_marginStart="@dimen/container_margin"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        >
         <!-- TODO: Update blank fragment layout -->
-
-        <AutoCompleteTextView
-            android:id="@+id/actv_location"
+        <android.support.v7.widget.CardView
+            android:id="@+id/searchCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="">
+            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:padding="10dp">
 
-            <requestFocus />
-        </AutoCompleteTextView>
+            <AutoCompleteTextView
+                android:id="@+id/actv_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:hint="Search Doctor"
+                android:padding="10dp"
+                android:text=""
+                android:textSize="12sp"/>
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyVLocationSearch"
-            android:layout_below="@+id/actv_location"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/searchCard" />
     </RelativeLayout>
 
 </FrameLayout>
