BackButton Color White in pt doctor fragment/activity Theme changed

--- a/app/src/main/res/layout/frag_pt_view_doctor_profile.xml
+++ b/app/src/main/res/layout/frag_pt_view_doctor_profile.xml
@@ -74,6 +74,7 @@
                 android:textSize="11sp" />
 
             <TextView
+                android:textColor="@color/gray"
                 android:textSize="11sp"
                 android:id="@+id/doc_education"
                 android:layout_marginLeft="10dp"
