--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -58,9 +58,10 @@
 
 
     <android.support.v7.widget.CardView
-        android:layout_margin="@dimen/margin_def"
+        android:id="@+id/cv2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_def"
         android:layout_marginTop="20dp"
         android:background="@color/white"
         app:cardUseCompatPadding="true"
@@ -87,6 +88,34 @@
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/ic_menu_pickup_date_range" />
         </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_def"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cv2">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="0dp">
+
+            <TextView
+
+                android:padding="@dimen/padding_def"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/pick_time_n_date"
+                android:textColor="@color/colorPrimary" />
+
+             </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <Button
