--- a/app/src/main/res/layout/frag_pt_pickup_calander.xml
+++ b/app/src/main/res/layout/frag_pt_pickup_calander.xml
@@ -19,7 +19,13 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="5dp" />
 
-        <LinearLayout
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyVTime"
+            android:layout_below="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <!--<LinearLayout
             android:gravity="center_horizontal"
             android:id="@+id/btnLayout"
             android:layout_width="match_parent"
@@ -133,7 +139,7 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
-        </LinearLayout>
+        </LinearLayout>-->
 <!--
         <Button
             android:layout_marginTop="@dimen/margin_def"
