Login page scroll fix

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,9 +17,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="30dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            >
+            android:layout_marginRight="12dp">
 
             <ImageView
                 android:id="@+id/top_icon"
@@ -64,12 +64,12 @@
                 android:typeface="normal" />
 
             <Button
-                android:layout_marginBottom="20dp"
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/forgot"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/ripple_effect_reg"
 
@@ -78,29 +78,33 @@
                 android:textColor="@color/color_white" />
 
             <ImageView
-                android:layout_centerHorizontal="true"
                 android:id="@+id/fblogin"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_below="@id/btn_login"
-                android:src="@drawable/fblogin"
-                />
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/fblogin" />
 
             <TextView
-                android:layout_marginTop="30dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/fblogin"
-                android:layout_gravity="bottom"
                 android:id="@+id/tvRegistration"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/fblogin"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
                 android:fontFamily="@font/robotoregular"
                 android:gravity="bottom"
                 android:text="Create a new account !"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/colorPrimary"
                 android:typeface="normal" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/tvRegistration" />
 
         </RelativeLayout>
 
